feat: implement local-first layered retrieval